--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -6,82 +6,78 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - alsa-lib=1.2.3
-  - asgiref=3.3.4
+  - asgiref=3.4.1
   - attrs=21.2.0
-  - backports=1.0
-  - backports.functools_lru_cache=1.6.4
-  - bokeh=2.3.3
-  - brotlipy=0.7.0
+  - bokeh=2.4.1
   - bzip2=1.0.8
-  - c-ares=1.17.2
-  - ca-certificates=2021.5.30
-  - cartopy=0.19.0.post1
-  - certifi=2021.5.30
-  - cffi=1.14.3
-  - chardet=3.0.4
-  - click=7.1.2
+  - c-ares=1.18.1
+  - ca-certificates=2021.10.8
+  - cartopy=0.20.1
+  - certifi=2021.10.8
+  - click=8.0.3
   - cloudpickle=2.0.0
   - configobj=5.0.6
-  - contextvars=2.4
-  - cryptography=3.2.1
-  - curl=7.78.0
-  - cycler=0.10.0
+  - curl=7.80.0
+  - cycler=0.11.0
   - cython=0.29.24
-  - cytoolz=0.11.0
-  - dask=2021.3.0
-  - dask-core=2021.3.0
+  - cytoolz=0.11.2
+  - dask=2021.11.1
+  - dask-core=2021.11.1
   - dbus=1.13.6
-  - distributed=2021.3.0
-  - django=3.1.3
-  - eccodes=2.22.1
+  - distributed=2021.11.1
+  - django=3.2.9
+  - eccodes=2.23.0
   - expat=2.4.1
   - fontconfig=2.13.1
+  - freeglut=3.2.1
   - freetype=2.10.4
-  - fsspec=2021.8.1
-  - geos=3.9.1
+  - fsspec=2021.11.0
+  - geos=3.10.0
   - gettext=0.19.8.1
-  - glib=2.68.4
-  - glib-tools=2.68.4
+  - glib=2.70.0
+  - glib-tools=2.70.0
   - gst-plugins-base=1.18.5
   - gstreamer=1.18.5
   - hdf4=4.2.15
-  - hdf5=1.10.6
+  - hdf5=1.12.1
   - heapdict=1.0.1
-  - icu=68.1
-  - immutables=0.16
-  - importlib-metadata=4.8.1
-  - importlib_metadata=4.8.1
-  - jasper=1.900.1
+  - icu=68.2
+  - importlib-metadata=4.8.2
+  - importlib_metadata=4.8.2
+  - iniconfig=1.1.1
+  - jasper=2.0.33
   - jbig=2.1
-  - jinja2=3.0.1
+  - jinja2=3.0.3
   - jpeg=9d
-  - kiwisolver=1.3.1
+  - kiwisolver=1.3.2
   - krb5=1.19.2
   - lcms2=2.12
   - ld_impl_linux-64=2.36.1
-  - lerc=2.2.1
-  - libaec=1.0.5
+  - lerc=3.0
+  - libaec=1.0.6
   - libblas=3.9.0
   - libcblas=3.9.0
   - libclang=11.1.0
-  - libcurl=7.78.0
-  - libdeflate=1.7
+  - libcurl=7.80.0
+  - libdeflate=1.8
   - libedit=3.1.20191231
   - libev=4.33
   - libevent=2.1.10
-  - libffi=3.3
-  - libgcc-ng=11.1.0
-  - libgfortran-ng=11.1.0
-  - libgfortran5=11.1.0
-  - libglib=2.68.4
-  - libgomp=11.1.0
+  - libffi=3.4.2
+  - libgcc-ng=11.2.0
+  - libgfortran-ng=11.2.0
+  - libgfortran5=11.2.0
+  - libglib=2.70.0
+  - libglu=9.0.0
+  - libgomp=11.2.0
   - libiconv=1.16
   - liblapack=3.9.0
   - libllvm11=11.1.0
-  - libnetcdf=4.8.0
+  - libnetcdf=4.8.1
   - libnghttp2=1.43.0
+  - libnsl=2.0.0
   - libogg=1.3.4
-  - libopenblas=0.3.17
+  - libopenblas=0.3.18
   - libopus=1.3.1
   - libpng=1.6.37
   - libpq=13.3
@@ -95,102 +91,104 @@ dependencies:
   - libxkbcommon=1.0.3
   - libxml2=2.9.12
   - libzip=1.8.0
+  - libzlib=1.2.11
   - locket=0.2.0
   - lz4-c=1.9.3
   - markupsafe=2.0.1
-  - matplotlib=3.3.4
-  - matplotlib-base=3.3.4
-  - more-itertools=8.10.0
+  - matplotlib=3.4.3
+  - matplotlib-base=3.4.3
+  - more-itertools=8.11.0
   - msgpack-python=1.0.2
-  - mysql-common=8.0.25
-  - mysql-libs=8.0.25
+  - mysql-common=8.0.27
+  - mysql-libs=8.0.27
   - ncurses=6.2
-  - nspr=4.30
-  - nss=3.69
-  - numpy=1.19.5
+  - nspr=4.32
+  - nss=3.72
   - olefile=0.46
   - openjpeg=2.4.0
   - openssl=1.1.1l
-  - owslib=0.20.0
   - packaging=21.0
-  - pandas=1.1.5
+  - pandas=1.3.4
   - partd=1.2.0
   - pcre=8.45
-  - pillow=8.3.2
-  - pip=21.2.4
-  - pluggy=0.13.1
-  - proj=7.2.0
+  - pillow=8.4.0
+  - pip=21.3.1
+  - pluggy=1.0.0
+  - proj=8.2.0
   - psutil=5.8.0
   - pthread-stubs=0.4
-  - py=1.10.0
-  - pycparser=2.20
-  - pyepsg=0.4.0
+  - py=1.11.0
   - pygrib=2.1.4
   - pykdtree=1.3.4
-  - pyopenssl=20.0.1
-  - pyparsing=2.4.7
-  - pyproj=3.0.1
+  - pyparsing=3.0.6
+  - pyproj=3.2.1
   - pyqt=5.12.3
   - pyqt-impl=5.12.3
   - pyqt5-sip=4.19.18
   - pyqtchart=5.12
   - pyqtwebengine=5.12.1
-  - pyresample=1.21.1
+  - pyresample=1.22.0
   - pyshp=2.1.3
-  - pysocks=1.7.1
-  - pytest=5.4.3
-  - python=3.6.13
+  - pytest=6.2.5
+  - python=3.8.12
   - python-dateutil=2.8.2
-  - python_abi=3.6
-  - pytz=2021.1
-  - pyyaml=5.4.1
+  - python_abi=3.8
+  - pytz=2021.3
+  - pyyaml=6.0
   - qt=5.12.9
   - readline=8.1
-  - scipy=1.5.3
-  - setuptools=58.0.4
-  - shapely=1.7.1
-  - sip=4.19.8
+  - scipy=1.7.2
+  - setuptools=59.1.1
+  - shapely=1.8.0
   - six=1.16.0
   - sortedcontainers=2.4.0
   - sqlite=3.36.0
   - sqlparse=0.4.2
   - tblib=1.7.0
   - tk=8.6.11
-  - toolz=0.11.1
+  - toml=0.10.2
+  - toolz=0.11.2
   - tornado=6.1
-  - typing-extensions=3.10.0.0
-  - typing_extensions=3.10.0.0
-  - wcwidth=0.2.5
+  - typing_extensions=3.10.0.2
   - wheel=0.37.0
-  - xarray=0.18.2
+  - xorg-fixesproto=5.0
+  - xorg-inputproto=2.3.2
+  - xorg-kbproto=1.0.7
+  - xorg-libx11=1.7.2
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxfixes=5.0.3
+  - xorg-libxi=1.7.10
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
   - xz=5.2.5
   - yaml=0.2.5
   - zict=2.0.0
-  - zipp=3.5.0
+  - zipp=3.6.0
   - zlib=1.2.11
   - zstd=1.5.0
   - pip:
-    - amqp==2.6.1
+    - amqp==5.0.6
     - ascat==2.0.1
     - asciitree==0.3.3
-    - billiard==3.5.0.5
+    - billiard==3.6.4.0
     - c3s-sm==0.1.2
-    - cached-property==1.5.2
     - cadati==0.0.2
     - cdsapi==0.5.1
-    - celery==4.1.1
-    - cftime==1.5.0
-    - charset-normalizer==2.0.6
+    - celery==5.2.0
+    - cftime==1.5.1.1
+    - charset-normalizer==2.0.7
+    - click-didyoumean==0.3.0
+    - click-plugins==1.1.1
+    - click-repl==0.2.0
     - colorcet==2.0.6
-    - configparser==5.0.2
-    - coreapi==2.3.3
-    - coreschema==0.0.4
-    - coverage==5.5
+    - configparser==5.1.0
+    - coverage==6.1.2
     - datedown==0.3
+    - deprecated==1.2.13
     - django-countries==7.2.1
-    - django-widget-tweaks==1.4.8
+    - django-widget-tweaks==1.4.9
     - djangorestframework==3.12.4
     - drf-yasg==1.20.0
     - ease-grid==0.2
@@ -199,45 +197,45 @@ dependencies:
     - esa-cci-sm==0.1.1
     - gldas==0.6.1
     - h5netcdf==0.11.0
-    - h5py==3.1.0
-    - idna==3.2
-    - inflection==0.5.1
+    - fasteners==0.16.3
+    - h5py==3.5.0
+    - idna==3.3
     - ismn==1.1.0
-    - itypes==1.2.0
-    - jinja2==3.0.1
-    - kombu==4.6.11
-    - llvmlite==0.36.0
-    - lxml==4.6.3
-    - markupsafe==2.0.1
-    - netcdf4==1.5.7
-    - numba==0.53.1
+    - kombu==5.2.1
+    - llvmlite==0.37.0
+    - lxml==4.6.4
+    - netcdf4==1.5.8
+    - numba==0.54.1
     - numcodecs==0.9.1
-    - param==1.11.1
+    - numpy==1.20.3
+    - param==1.12.0
     - parse==1.19.0
-    - psycopg2-binary==2.9.1
+    - prompt-toolkit==3.0.22
+    - psycopg2-binary==2.9.2
     - pyct==0.4.8
     - pygeobase==0.4.0
     - pygeogrids==0.4.1
     - pynetcf==0.2.2
     - pytesmo==0.12.0
-    - pytest-cov==2.12.1
+    - pytest-cov==3.0.0
     - pytest-django==4.4.0
     - pytest-mpl==0.13
-    - qa4sm-reader==0.5
-    - redis==3.5.3
+    - qa4sm-preprocessing==0.1.0
+    - qa4sm-reader==0.6.1
+    - redis==4.0.0
     - repurpose==0.8
     - requests==2.26.0
-    - ruamel-yaml==0.17.16
-    - ruamel-yaml-clib==0.2.6
+    - ruamel-yaml==0.17.17
     - seaborn==0.11.2
-    - shapely==1.7.1
     - smap-io==0.4
-    - smecv-grid==0.3
+    - smecv-grid==0.2.1
     - smos==0.2
-    - toml==0.10.2
-    - tqdm==4.62.2
+    - tomli==1.2.2
+    - tqdm==4.62.3
     - trollsift==0.2.1
-    - uritemplate==3.0.1
-    - urllib3==1.26.6
-    - vine==1.3.0
-    - qa4sm-preprocessing==0.1.0
+    - urllib3==1.26.7
+    - vine==5.0.0
+    - wcwidth==0.2.5
+    - wrapt==1.13.3
+    - xarray==0.18.2
+    - zarr==2.10.2
