--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -23,7 +23,7 @@ dependencies:
   - aws-checksums=0.1.14
   - aws-crt-cpp=0.19.9
   - aws-sdk-cpp=1.10.57
-  - bokeh=3.1.0
+  - bokeh=3.1.1
   - brotli=1.0.9
   - brotli-bin=1.0.9
   - brotlipy=0.7.0
@@ -60,7 +60,7 @@ dependencies:
   - fontconfig=2.14.2
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.39.3
+  - fonttools=4.39.4
   - freeglut=3.2.2
   - freetype=2.12.1
   - fsspec=2023.5.0
@@ -86,7 +86,7 @@ dependencies:
   - importlib_metadata=6.6.0
   - importlib_resources=5.12.0
   - iniconfig=2.0.0
-  - intel-openmp=2022.1.0
+  - intel-openmp=2023.1.0
   - jack=1.9.22
   - jasper=4.0.0
   - jinja2=3.1.2
@@ -96,7 +96,7 @@ dependencies:
   - kiwisolver=1.4.4
   - krb5=1.20.1
   - lame=3.100
-  - lcms2=2.15
+  - lcms2=2.14
   - ld_impl_linux-64=2.40
   - lerc=4.0.0
   - libabseil=20230125.0
@@ -114,7 +114,7 @@ dependencies:
   - libcups=2.3.3
   - libcurl=8.0.1
   - libdb=6.2.32
-  - libdeflate=1.17
+  - libdeflate=1.14
   - libedit=3.1.20191231
   - libev=4.33
   - libevent=2.1.10
@@ -130,7 +130,8 @@ dependencies:
   - libgomp=12.2.0
   - libgoogle-cloud=2.8.0
   - libgpg-error=1.46
-  - libgrpc=1.54.1
+  - libgrpc=1.54.2
+  - libhwloc=2.9.1
   - libiconv=1.17
   - liblapack=3.9.0
   - libllvm14=14.0.6
@@ -151,7 +152,7 @@ dependencies:
   - libstdcxx-ng=12.2.0
   - libsystemd0=253
   - libthrift=0.18.1
-  - libtiff=4.5.0
+  - libtiff=4.4.0
   - libtool=2.4.7
   - libudev1=253
   - libutf8proc=2.8.0
@@ -164,13 +165,14 @@ dependencies:
   - libxml2=2.10.3
   - libzip=1.9.2
   - libzlib=1.2.13
+  - llvm-openmp=16.0.3
   - locket=1.0.0
   - lz4=4.3.2
   - lz4-c=1.9.4
   - markupsafe=2.1.2
   - matplotlib=3.7.1
   - matplotlib-base=3.7.1
-  - mkl=2022.1.0
+  - mkl=2023.1.0
   - mpg123=1.31.3
   - msgpack-python=1.0.5
   - munkres=1.1.4
@@ -189,12 +191,12 @@ dependencies:
   - partd=1.4.0
   - pcre=8.45
   - pcre2=10.40
-  - pillow=9.4.0
+  - pillow=9.2.0
   - pip=23.1.2
   - pixman=0.40.0
   - pluggy=1.0.0
   - ply=3.11
-  - proj=9.2.0
+  - proj=9.0.1
   - psutil=5.9.5
   - pthread-stubs=0.4
   - pulseaudio=16.1
@@ -207,7 +209,7 @@ dependencies:
   - pykdtree=1.3.7.post0
   - pyopenssl=23.1.1
   - pyparsing=3.0.9
-  - pyproj=3.5.0
+  - pyproj=3.3.1
   - pyqt=5.15.7
   - pyqt5-sip=12.11.0
   - pyresample=1.26.1
@@ -232,6 +234,7 @@ dependencies:
   - sortedcontainers=2.4.0
   - sqlite=3.41.2
   - sqlparse=0.4.4
+  - tbb=2021.9.0
   - tblib=1.7.0
   - tk=8.6.12
   - toml=0.10.2
