--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -6,25 +6,9 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - alsa-lib=1.2.8
-  - arrow-cpp=11.0.0
   - asgiref=3.6.0
   - attr=2.5.1
-  - aws-c-auth=0.6.26
-  - aws-c-cal=0.5.26
-  - aws-c-common=0.8.17
-  - aws-c-compression=0.2.16
-  - aws-c-event-stream=0.2.20
-  - aws-c-http=0.7.7
-  - aws-c-io=0.13.21
-  - aws-c-mqtt=0.8.6
-  - aws-c-s3=0.2.8
-  - aws-c-sdkutils=0.1.9
-  - aws-checksums=0.1.14
-  - aws-crt-cpp=0.19.9
-  - aws-sdk-cpp=1.10.57
-  - backports=1.0
-  - backports.zoneinfo=0.2.1
-  - bokeh=3.1.1
+  - bokeh=2.4.3
   - brotli=1.0.9
   - brotli-bin=1.0.9
   - brotlipy=0.7.0
@@ -43,14 +27,13 @@ dependencies:
   - cryptography=40.0.2
   - cycler=0.11.0
   - cytoolz=0.12.0
-  - dask=2023.4.1
-  - dask-core=2023.4.1
+  - dask=2023.3.0
+  - dask-core=2023.3.0
   - dbus=1.13.6
-  - distributed=2023.4.1
-  - django=4.0.6
+  - distributed=2023.3.0
+  - django=4.0
   - exceptiongroup=1.1.1
   - expat=2.5.0
-  - fftw=3.3.10
   - font-ttf-dejavu-sans-mono=2.37
   - font-ttf-inconsolata=3.000
   - font-ttf-source-code-pro=2.038
@@ -63,51 +46,40 @@ dependencies:
   - fsspec=2023.5.0
   - geos=3.11.2
   - gettext=0.21.1
-  - gflags=2.2.2
   - glib=2.76.2
   - glib-tools=2.76.2
-  - glog=0.6.0
   - graphite2=1.3.13
   - gst-plugins-base=1.22.0
   - gstreamer=1.22.0
-  - gstreamer-orc=0.4.33
   - harfbuzz=6.0.0
   - hdf4=4.2.15
   - hdf5=1.14.0
-  - icu=70.1
+  - icu=72.1
   - idna=3.4
   - importlib-metadata=6.6.0
   - importlib-resources=5.12.0
-  - importlib_metadata=6.6.0
   - importlib_resources=5.12.0
   - iniconfig=2.0.0
-  - intel-openmp=2022.1.0
-  - jack=1.9.22
   - jinja2=3.1.2
-  - jpeg=9e
   - keyutils=1.6.1
   - kiwisolver=1.4.4
   - krb5=1.20.1
   - lame=3.100
-  - lcms2=2.14
+  - lcms2=2.15
   - ld_impl_linux-64=2.40
   - lerc=4.0.0
-  - libabseil=20230125.0
   - libaec=1.0.6
-  - libarrow=11.0.0
   - libblas=3.9.0
   - libbrotlicommon=1.0.9
   - libbrotlidec=1.0.9
   - libbrotlienc=1.0.9
   - libcap=2.67
   - libcblas=3.9.0
-  - libclang=15.0.7
-  - libclang13=15.0.7
-  - libcrc32c=1.1.2
+  - libclang=16.0.3
+  - libclang13=16.0.3
   - libcups=2.3.3
   - libcurl=8.0.1
-  - libdb=6.2.32
-  - libdeflate=1.14
+  - libdeflate=1.18
   - libedit=3.1.20191231
   - libev=4.33
   - libevent=2.1.10
@@ -120,47 +92,37 @@ dependencies:
   - libgfortran5=12.2.0
   - libglib=2.76.2
   - libgomp=12.2.0
-  - libgoogle-cloud=2.8.0
   - libgpg-error=1.46
-  - libgrpc=1.54.2
   - libiconv=1.17
-  - libjpeg-turbo=2.1.4
+  - libjpeg-turbo=2.1.5.1
   - liblapack=3.9.0
-  - libllvm15=15.0.7
-  - libllvm16=16.0.1
+  - libllvm16=16.0.3
   - libnghttp2=1.52.0
   - libnsl=2.0.0
-  - libnuma=2.0.16
   - libogg=1.3.4
-  - libopenblas=0.3.23
+  - libopenblas=0.3.20
   - libopus=1.3.1
   - libpng=1.6.39
   - libpq=15.3
-  - libprotobuf=3.21.12
   - libsndfile=1.2.0
   - libsqlite=3.41.2
   - libssh2=1.10.0
   - libstdcxx-ng=12.2.0
   - libsystemd0=253
-  - libthrift=0.18.1
-  - libtiff=4.4.0
-  - libtool=2.4.7
-  - libudev1=253
-  - libutf8proc=2.8.0
+  - libtiff=4.5.0
   - libuuid=2.38.1
   - libvorbis=1.3.7
   - libwebp-base=1.3.0
   - libxcb=1.13
   - libxkbcommon=1.5.0
-  - libxml2=2.10.3
+  - libxml2=2.10.4
   - libzlib=1.2.13
   - locket=1.0.0
-  - lz4=4.3.2
+  - lz4=4.0.0
   - lz4-c=1.9.4
   - markupsafe=2.1.2
   - matplotlib=3.7.1
   - matplotlib-base=3.7.1
-  - mkl=2022.1.0
   - mpg123=1.31.3
   - msgpack-python=1.0.5
   - munkres=1.1.4
@@ -172,29 +134,25 @@ dependencies:
   - numpy=1.24.3
   - openjpeg=2.5.0
   - openssl=3.1.0
-  - orc=1.8.3
   - packaging=23.1
   - pandas=1.5.3
-  - parquet-cpp=1.5.1
   - partd=1.4.0
   - pcre2=10.40
+  - pillow=9.5.0
   - pip=23.1.2
   - pixman=0.40.0
   - platformdirs=3.5.1
   - pluggy=1.0.0
   - ply=3.11
   - pooch=1.7.0
-  - proj=9.0.1
+  - proj=9.2.0
   - psutil=5.9.5
   - pthread-stubs=0.4
-  - pulseaudio=16.1
   - pulseaudio-client=16.1
-  - pulseaudio-daemon=16.1
-  - pyarrow=11.0.0
   - pycparser=2.21
   - pyopenssl=23.1.1
   - pyparsing=3.0.9
-  - pyproj=3.3.1
+  - pyproj=3.5.0
   - pyqt=5.15.7
   - pyqt5-sip=12.11.0
   - pyshp=2.3.1
@@ -206,16 +164,13 @@ dependencies:
   - pytz=2023.3
   - pyyaml=6.0
   - qt-main=5.15.8
-  - re2=2023.02.02
   - readline=8.2
   - requests=2.29.0
-  - s2n=1.3.42
   - scipy=1.10.1
   - setuptools=64.0.0
   - shapely=2.0.1
   - sip=6.7.9
   - six=1.16.0
-  - snappy=1.1.10
   - sortedcontainers=2.4.0
   - sqlite=3.41.2
   - sqlparse=0.4.4
@@ -227,8 +182,6 @@ dependencies:
   - tornado=6.3
   - typing-extensions=4.5.0
   - typing_extensions=4.5.0
-  - tzdata=2023c
-  - ucx=1.14.0
   - unicodedata2=15.0.0
   - urllib3=1.26.15
   - wheel=0.40.0
@@ -250,7 +203,6 @@ dependencies:
   - xorg-xextproto=7.3.0
   - xorg-xf86vidmodeproto=2.3.1
   - xorg-xproto=7.0.31
-  - xyzservices=2023.2.0
   - xz=5.2.6
   - yaml=0.2.5
   - zict=3.0.0
@@ -262,6 +214,7 @@ dependencies:
     - ascat==2.1.0
     - asciitree==0.3.3
     - async-timeout==4.0.2
+    - backports-zoneinfo==0.2.1
     - billiard==3.6.4.0
     - c3s-sm==0.1.2
     - cadati==0.0.4
@@ -303,7 +256,6 @@ dependencies:
     - numcodecs==0.11.0
     - param==1.13.0
     - parse==1.19.0
-    - pillow==9.5.0
     - prompt-toolkit==3.0.38
     - psycopg2-binary==2.9.6
     - pyct==0.5.0
